# myRTOS

./: .gitignore  CMakeLists.txt  makefile
src/: init.c  main.c  sched.c  sem.c  startup.c  utils.c
src/include/: init.h  list.h  sched.h  sem.h  utils.h
